--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
   "author": "sh.watanabe",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.16.1",
     "express": "^4.14.1"
   }
 }
